[project]
name = "ravelights_ui"
version = "0.7.0"
description = "Python package containing the build frontend for ravelights"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
	"Programming Language :: Python :: 3",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ravelights_ui"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
ravelights_ui = ["frontend/**/*"]
